--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </head>
 
   <body>
+
     <header class="jumbotron text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
@@ -34,115 +35,118 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
     <!-- 1st Row -->
       <div class="row align-items-start">
-        <div class="col">
+        <div class="col hour col-xs-2 col-sm-2">
           9AM
         </div>
-        <div class="col" id="task9">
-          One of three columns
+        <div class="col col-xs-8 col-sm-8 task" id="task9" contentEditable="true">
+          Enter event here.
         </div>
-        <div class="col">
-        <button class="btn btn-primary" type="submit">Button</button>
-
+        <div class="col col-xs-2 col-sm-2">
+        <button id="save" class="btn btn-primary" type="submit">Save</button>
         </div>
       </div>
+
   <!-- 2nd Row -->
       <div class="row align-items-start">
-        <div class="col">
+        <div class="col hour col-xs-2 col-sm-2">
           10AM
         </div>
-        <div class="col" id="task10">
-          One of three columns
+        <div class="col col-xs-8 col-sm-8 task" id="task10" contentEditable="true">
+          Enter event here.
         </div>
-        <div class="col">
-          One of three columns
+        <div class="col col-xs-2 col-sm-2">
+          <button id="save" class="btn btn-primary" type="submit">Save</button>
         </div>
       </div>
   <!-- 3rd Row -->
       <div class="row align-items-start">
-        <div class="col">
+        <div class="col hour col-xs-2 col-sm-2">
           11AM
         </div>
-        <div class="col" id="task11">
-            One of three columns
+        <div class="col col-xs-8 col-sm-8 task" id="task11" contentEditable="true">
+          Enter event here.
         </div>
-        <div class="col">
-            One of three columns
+        <div class="col col-xs-2 col-sm-2">
+          <button id="save" class="btn btn-primary" type="submit">Save</button>
         </div>
             </div>
   <!-- 4th Row -->
         <div class="row align-items-start">
-          <div class="col">
+          <div class="col hour col-xs-2 col-sm-2">
             12PM
           </div>
-          <div class="col" id="task12">
-            One of three columns
+          <div class="col col-xs-8 col-sm-8 task" id="task12" contentEditable="true">
+            Enter event here.
           </div>
-          <div class="col">
-             One of three columns
+          <div class="col col-xs-2 col-sm-2">
+            <button id="save" class="btn btn-primary" type="submit">Save</button>
           </div>
           </div>
   <!-- 5th Row -->
         <div class="row align-items-start">
-          <div class="col">
+          <div class="col hour col-xs-2 col-sm-2">
            1PM
           </div>
-          <div class="col" id="task13">
-            One of three columns
+          <div class="col col-xs-8 col-sm-8 task" id="task13" contentEditable="true">
+            Enter event here.
           </div>
-          <div class="col">
-            One of three columns
+          <div class="col col-xs-2 col-sm-2">
+            <button id="save" class="btn btn-primary" type="submit">Save</button>
           </div>
         </div>
   <!-- 6th Row -->
         <div class="row align-items-start">
-          <div class="col">
+          <div class="col hour col-xs-2 col-sm-2">
             2PM
           </div>
-          <div class="col" id="task14">
-            One of three columns
+          <div class="col col-xs-8 col-sm-8 task" id="task14" contentEditable="true">
+            Enter event here.
           </div>
-          <div class="col">
-            One of three columns
+          <div class="col col-xs-2 col-sm-2">
+            <button id="save" class="btn btn-primary" type="submit">Save</button>
           </div>
         </div>
   <!-- 7th Row -->
         <div class="row align-items-start">
-          <div class="col">
+          <div class="col hour col-xs-2 col-sm-2">
             3PM
           </div> 
-          <div class="col" id="task15">
-            One of three columns
+          <div class="col col-xs-8 col-sm-8 task" id="task15" contentEditable="true">
+            Enter event here.
           </div>
-          <div class="col">
-            One of three columns
+          <div class="col col-xs-2 col-sm-2">
+            <button id="save" class="btn btn-primary" type="submit">Save</button>
           </div>
         </div>
   <!-- 8th Row -->
         <div class="row align-items-start">
-          <div class="col">
+          <div class="col hour col-xs-2 col-sm-2">
             4PM
           </div>
-          <div class="col" id="task16">
-            One of three columns
+          <div class="col col-xs-8 col-sm-8 task" id="task16" contentEditable="true">
+            Enter event here.
           </div>
-          <div class="col">
-            One of three columns
+          <div class="col col-xs-2 col-sm-2">
+            <button id="save" class="btn btn-primary" type="submit">Save</button>
           </div>
         </div>
   <!-- 9th Row -->
         <div class="row align-items-start">
-          <div class="col">
+          <div class="col hour col-xs-2 col-sm-2">
             5PM
           </div>
-          <div class="col"id="task17">
-            One of three columns
+          <div class="col col-xs-8 col-sm-8 task" id="task17" contentEditable="true">
+            Enter event here.
           </div>
-          <div class="col">
-            One of three columns
+          <div class="col col-xs-2 col-sm-2">
+            <button id="save" class="btn btn-primary" type="submit">Save</button>
           </div>
         </div>
+
+        
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
